feat: implement comprehensive security hardening measures
- Add HTTP security headers (CSP, HSTS, X-Content-Type-Options)
- Enforce 2FA for providers and admins with session management
- Add refresh token rotation with reuse detection
- Configure AWS WAF v2 with bot protection and SQLi/XSS prevention
- Implement secure file uploads with MIME validation and AV scanning
- Add data classification with Public/Internal/Sensitive tags
- Set up AES-256-GCM encryption at rest with key rotation
- Create encrypted backup service with integrity verification
- Complete DAST security scan with zero high-risk vulnerabilities